@@ -608,6 +608,8 @@ production.
 * (bug 28817) Add reference help page link to API Modules
 * (bug 29935) Improve formatting of examples in ApiParamInfo
 * (bug 29938) list=users&usprop=rights shows rights the user doesn't have
+* (bug 24781) The API will include an XML namespace if the includexmlnamespace
+  parameter is set.
 
 === Languages updated in 1.18 ===
 
